# payment-gateway-challenge-python

./: README.md  pyproject.toml
payment_gateway_api/: app.py  bank_client.py  models.py  storage.py
tests/: test_payments.py
