[tool.poetry]
name = "payment-gateway-api"
version = "0.1.0"
description = "Payment Gateway API"
authors = ["Author <author@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
# Latest stable versions as of May 2026
uvicorn = "^0.46.0"
gunicorn = "^25.2.0"
fastapi = "^0.136.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
requests = "^2.31.0"
httpx = "^0.27.0"
pytest-asyncio = "^0.25.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"